# email-notifications-worker

./: Dockerfile  pyproject.toml
app/: main.py  models.py  service.py
app/core/: broker.py  config.py  log.py
app/queues/: account_verification.py  reset_password.py
app/templates/: reset_password.py  verification_code.py
dev/: docker-compose.yml
